src/jse/org/luaj/vm2/luajc/antlr/LuaParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 Lua.g 2009-10-19 10:13:33
 
	package org.luaj.vm2.luajc.antlr;
	import org.luaj.vm2.luajc.lst.*; 


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;
public class LuaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NAME", "INT", "FLOAT1", "FLOAT2", "FLOAT3", "EXP", "HEX", "NORMALSTRING", "CHARSTRING", "LONGSTRING", "EscapeSequence", "DecimalEscape", "COMMENT", "LINE_COMMENT", "WS", "NEWLINE", "';'", "'='", "'do'", "'end'", "'while'", "'repeat'", "'until'", "'for'", "','", "'in'", "'function'", "'local'", "'if'", "'then'", "'elseif'", "'else'", "'return'", "'break'", "'.'", "':'", "'nil'", "'false'", "'true'", "'...'", "'('", "')'", "'['", "']'", "'{'", "'}'", "'+'", "'-'", "'*'", "'/'", "'^'", "'%'", "'..'", "'<'", "'<='", "'>'", "'>='", "'=='", "'~='", "'and'", "'or'", "'not'", "'#'"
    };
    public static final int T__66=66;
    public static final int T__64=64;
    public static final int T__29=29;
    public static final int T__65=65;
    public static final int T__28=28;
    public static final int T__62=62;
    public static final int T__27=27;
    public static final int T__63=63;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int T__61=61;
    public static final int T__60=60;
    public static final int EOF=-1;
    public static final int FLOAT3=8;
    public static final int FLOAT2=7;
    public static final int FLOAT1=6;
    public static final int T__55=55;
    public static final int T__56=56;
    public static final int T__57=57;
    public static final int NAME=4;
    public static final int T__58=58;
    public static final int T__51=51;
    public static final int T__52=52;
    public static final int T__53=53;
    public static final int T__54=54;
    public static final int EXP=9;
    public static final int HEX=10;
    public static final int T__59=59;
    public static final int DecimalEscape=15;
    public static final int COMMENT=16;
    public static final int T__50=50;
    public static final int T__42=42;
    public static final int T__43=43;
    public static final int T__40=40;
    public static final int T__41=41;
    public static final int T__46=46;
    public static final int T__47=47;
    public static final int T__44=44;
    public static final int T__45=45;
    public static final int LINE_COMMENT=17;
    public static final int T__48=48;
    public static final int T__49=49;
    public static final int CHARSTRING=12;
    public static final int INT=5;
    public static final int LONGSTRING=13;
    public static final int T__30=30;
    public static final int NORMALSTRING=11;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=18;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int NEWLINE=19;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int EscapeSequence=14;

    // delegates
    // delegators


        public LuaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public LuaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return LuaParser.tokenNames; }
    public String getGrammarFileName() { return "Lua.g"; }


    	LSChunk CHK = null;



    // $ANTLR start "chunk"
    // Lua.g:22:1: chunk[String chunkname] returns [LSChunk c] : funcblock[CHK.function] ;
    public final LSChunk chunk(String chunkname) throws RecognitionException {
        LSChunk c = null;

         CHK = new LSChunk(chunkname); 
        try {
            // Lua.g:24:2: ( funcblock[CHK.function] )
            // Lua.g:24:4: funcblock[CHK.function]
            {
            pushFollow(FOLLOW_funcblock_in_chunk58);
            funcblock(CHK.function);

            state._fsp--;
            if (state.failed) return c;
            if ( state.backtracking==0 ) {
              c =CHK;
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "chunk"

    protected static class funcblock_scope {
        LSFunction func;
    }
    protected Stack funcblock_stack = new Stack();


    // $ANTLR start "funcblock"
    // Lua.g:27:1: funcblock[LSFunction f] : block ;
    public final void funcblock(LSFunction f) throws RecognitionException {
        funcblock_stack.push(new funcblock_scope());
        List<LSStatement> block1 = null;


         ((funcblock_scope)funcblock_stack.peek()).func = f;  
        try {
            // Lua.g:30:2: ( block )
            // Lua.g:30:4: block
            {
            if ( state.backtracking==0 ) {
              CHK.pushScope("body");
            }
            pushFollow(FOLLOW_block_in_funcblock88);
            block1=block();

            state._fsp--;
            if (state.failed) return ;
            if ( state.backtracking==0 ) {
              f.setStatements(block1); CHK.popScope("body"); 
            }

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
            funcblock_stack.pop();
        }
        return ;
    }
    // $ANTLR end "funcblock"


    // $ANTLR start "block"
    // Lua.g:33:1: block returns [List<LSStatement> stats] : ( stat ( ';' )? )* ( laststat ( ';' )? )? ;
    public final List<LSStatement> block() throws RecognitionException {
        List<LSStatement> stats = null;

        LSStatement stat2 = null;

        LSStatement laststat3 = null;


         stats = new ArrayList<LSStatement>(); 
        try {
            // Lua.g:35:2: ( ( stat ( ';' )? )* ( laststat ( ';' )? )? )
            // Lua.g:35:4: ( stat ( ';' )? )* ( laststat ( ';' )? )?
            {
            // Lua.g:35:4: ( stat ( ';' )? )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==NAME||LA2_0==22||(LA2_0>=24 && LA2_0<=25)||LA2_0==27||(LA2_0>=30 && LA2_0<=32)||LA2_0==44) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // Lua.g:35:5: stat ( ';' )?
            	    {
            	    pushFollow(FOLLOW_stat_in_block113);
            	    stat2=stat();

            	    state._fsp--;
            	    if (state.failed) return stats;
            	    if ( state.backtracking==0 ) {
            	      stats.add(stat2);
            	    }
            	    // Lua.g:35:33: ( ';' )?
            	    int alt1=2;
            	    int LA1_0 = input.LA(1);

            	    if ( (LA1_0==20) ) {
            	        alt1=1;
            	    }
            	    switch (alt1) {
            	        case 1 :
            	            // Lua.g:35:34: ';'
            	            {
            	            match(input,20,FOLLOW_20_in_block118); if (state.failed) return stats;

            	            }
            	            break;

            	    }


            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            // Lua.g:36:3: ( laststat ( ';' )? )?
            int alt4=2;
            int LA4_0 = input.LA(1);

            if ( ((LA4_0>=36 && LA4_0<=37)) ) {
                alt4=1;
            }
            switch (alt4) {
                case 1 :
                    // Lua.g:36:4: laststat ( ';' )?
                    {
                    pushFollow(FOLLOW_laststat_in_block128);
                    laststat3=laststat();

                    state._fsp--;
                    if (state.failed) return stats;
                    if ( state.backtracking==0 ) {
                      stats.add(laststat3);
                    }
                    // Lua.g:36:40: ( ';' )?
                    int alt3=2;
                    int LA3_0 = input.LA(1);

                    if ( (LA3_0==20) ) {
                        alt3=1;
                    }
                    switch (alt3) {
                        case 1 :
                            // Lua.g:36:41: ';'
                            {
                            match(input,20,FOLLOW_20_in_block133); if (state.failed) return stats;

                            }
                            break;

                    }


                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return stats;
    }
    // $ANTLR end "block"


    // $ANTLR start "stat"
    // Lua.g:39:1: stat returns [LSStatement s] : ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | ifstat | 'for' NAME '=' e1= exp ',' e2= exp ( ',' e3= exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? );
    public final LSStatement stat() throws RecognitionException {
        LSStatement s = null;

        Token NAME13=null;
        Token NAME20=null;
        LSExpression e1 = null;

        LSExpression e2 = null;

        LSExpression e3 = null;

        List<LSVariable> varlist14 = null;

        List<LSExpression> explist15 = null;

        LSVariable functioncall6 = null;

        List<LSStatement> block7 = null;

        LSExpression exp8 = null;

        List<LSStatement> block9 = null;

        List<LSStatement> block10 = null;

        LSExpression exp11 = null;

        LSStatement ifstat12 = null;

        List<LSStatement> block14 = null;

        List<String> namelist15 = null;

        List<LSExpression> explist116 = null;

        List<LSStatement> block17 = null;

        LSVariable funcname18 = null;

        LSFunction funcbody19 = null;

        LSFunction funcbody21 = null;

        List<String> namelist22 = null;

        List<LSExpression> explist123 = null;


         Name name=null; List<Name> names=null; 
        try {
            // Lua.g:41:2: ( varlist1 '=' explist1 | functioncall | 'do' block 'end' | 'while' exp 'do' block 'end' | 'repeat' block 'until' exp | ifstat | 'for' NAME '=' e1= exp ',' e2= exp ( ',' e3= exp )? 'do' block 'end' | 'for' namelist 'in' explist1 'do' block 'end' | 'function' funcname funcbody | 'local' 'function' NAME funcbody | 'local' namelist ( '=' explist1 )? )
            int alt7=11;
            alt7 = dfa7.predict(input);
            switch (alt7) {
                case 1 :
                    // Lua.g:41:4: varlist1 '=' explist1
                    {
                    pushFollow(FOLLOW_varlist1_in_stat159);
                    varlist14=varlist1();

                    state._fsp--;
                    if (state.failed) return s;
                    match(input,21,FOLLOW_21_in_stat161); if (state.failed) return s;
                    pushFollow(FOLLOW_explist1_in_stat163);
                    explist15=explist1();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.varAssignStatement(varlist14,explist15, CHK.peekScope(), ((funcblock_scope)funcblock_stack.peek()).func); 
                    }

                    }
                    break;
                case 2 :
                    // Lua.g:42:4: functioncall
                    {
                    pushFollow(FOLLOW_functioncall_in_stat183);
                    functioncall6=functioncall();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.functionCallStatement(functioncall6); 
                    }

                    }
                    break;
                case 3 :
                    // Lua.g:43:4: 'do' block 'end'
                    {
                    match(input,22,FOLLOW_22_in_stat213); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.pushScope("do");
                    }
                    pushFollow(FOLLOW_block_in_stat217);
                    block7=block();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.popScope("do");
                    }
                    match(input,23,FOLLOW_23_in_stat221); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.doBlockStatement(block7); 
                    }

                    }
                    break;
                case 4 :
                    // Lua.g:45:4: 'while' exp 'do' block 'end'
                    {
                    match(input,24,FOLLOW_24_in_stat286); if (state.failed) return s;
                    pushFollow(FOLLOW_exp_in_stat288);
                    exp8=exp();

                    state._fsp--;
                    if (state.failed) return s;
                    match(input,22,FOLLOW_22_in_stat290); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.pushScope("while");
                    }
                    pushFollow(FOLLOW_block_in_stat294);
                    block9=block();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.popScope("while");
                    }
                    match(input,23,FOLLOW_23_in_stat298); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.whileLoopStatement(exp8,block9); 
                    }

                    }
                    break;
                case 5 :
                    // Lua.g:47:4: 'repeat' block 'until' exp
                    {
                    match(input,25,FOLLOW_25_in_stat344); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.pushScope("repeat");
                    }
                    pushFollow(FOLLOW_block_in_stat349);
                    block10=block();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.popScope("repeat");
                    }
                    match(input,26,FOLLOW_26_in_stat354); if (state.failed) return s;
                    pushFollow(FOLLOW_exp_in_stat356);
                    exp11=exp();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.repeatUntilStatement(block10,exp11); 
                    }

                    }
                    break;
                case 6 :
                    // Lua.g:49:4: ifstat
                    {
                    pushFollow(FOLLOW_ifstat_in_stat410);
                    ifstat12=ifstat();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =ifstat12; 
                    }

                    }
                    break;
                case 7 :
                    // Lua.g:50:4: 'for' NAME '=' e1= exp ',' e2= exp ( ',' e3= exp )? 'do' block 'end'
                    {
                    match(input,27,FOLLOW_27_in_stat445); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.pushScope("fori");
                    }
                    NAME13=(Token)match(input,NAME,FOLLOW_NAME_in_stat449); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      name=CHK.declare((NAME13!=null?NAME13.getText():null));
                    }
                    match(input,21,FOLLOW_21_in_stat453); if (state.failed) return s;
                    pushFollow(FOLLOW_exp_in_stat457);
                    e1=exp();

                    state._fsp--;
                    if (state.failed) return s;
                    match(input,28,FOLLOW_28_in_stat459); if (state.failed) return s;
                    pushFollow(FOLLOW_exp_in_stat463);
                    e2=exp();

                    state._fsp--;
                    if (state.failed) return s;
                    // Lua.g:50:94: ( ',' e3= exp )?
                    int alt5=2;
                    int LA5_0 = input.LA(1);

                    if ( (LA5_0==28) ) {
                        alt5=1;
                    }
                    switch (alt5) {
                        case 1 :
                            // Lua.g:50:95: ',' e3= exp
                            {
                            match(input,28,FOLLOW_28_in_stat466); if (state.failed) return s;
                            pushFollow(FOLLOW_exp_in_stat470);
                            e3=exp();

                            state._fsp--;
                            if (state.failed) return s;

                            }
                            break;

                    }

                    match(input,22,FOLLOW_22_in_stat474); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.pushScope("foriblock");
                    }
                    pushFollow(FOLLOW_block_in_stat478);
                    block14=block();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.popScope("foriblock");
                    }
                    match(input,23,FOLLOW_23_in_stat482); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.forLoopStatement(name,e1,e2,e3,block14,CHK.peekScope()); CHK.popScope("fori"); 
                    }

                    }
                    break;
                case 8 :
                    // Lua.g:52:4: 'for' namelist 'in' explist1 'do' block 'end'
                    {
                    match(input,27,FOLLOW_27_in_stat528); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.pushScope("for");
                    }
                    pushFollow(FOLLOW_namelist_in_stat533);
                    namelist15=namelist();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      names=CHK.declare(namelist15);
                    }
                    match(input,29,FOLLOW_29_in_stat537); if (state.failed) return s;
                    pushFollow(FOLLOW_explist1_in_stat539);
                    explist116=explist1();

                    state._fsp--;
                    if (state.failed) return s;
                    match(input,22,FOLLOW_22_in_stat541); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.pushScope("forblock");
                    }
                    pushFollow(FOLLOW_block_in_stat545);
                    block17=block();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      CHK.popScope("forblock");
                    }
                    match(input,23,FOLLOW_23_in_stat548); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.forListStatement(names,explist116,block17,CHK.peekScope(), ((funcblock_scope)funcblock_stack.peek()).func); CHK.popScope("for");
                    }

                    }
                    break;
                case 9 :
                    // Lua.g:54:4: 'function' funcname funcbody
                    {
                    match(input,30,FOLLOW_30_in_stat593); if (state.failed) return s;
                    pushFollow(FOLLOW_funcname_in_stat595);
                    funcname18=funcname();

                    state._fsp--;
                    if (state.failed) return s;
                    pushFollow(FOLLOW_funcbody_in_stat597);
                    funcbody19=funcbody();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.varFunctionStatement(funcname18,funcbody19); 
                    }

                    }
                    break;
                case 10 :
                    // Lua.g:55:4: 'local' 'function' NAME funcbody
                    {
                    match(input,31,FOLLOW_31_in_stat610); if (state.failed) return s;
                    match(input,30,FOLLOW_30_in_stat612); if (state.failed) return s;
                    NAME20=(Token)match(input,NAME,FOLLOW_NAME_in_stat614); if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                      name=CHK.declare((NAME20!=null?NAME20.getText():null));
                    }
                    pushFollow(FOLLOW_funcbody_in_stat618);
                    funcbody21=funcbody();

                    state._fsp--;
                    if (state.failed) return s;
                    if ( state.backtracking==0 ) {
                       s =LSStatement.localFunctionStatement(name,funcbody21); 
                    }

                    }
                    break;
                case 11 :
                    // Lua.g:57:4: 'local' namelist ( '=' explist1 )?
                    {
                    match(input,31,FOLLOW_31_in_stat666); if (state.failed) return s;
                    pushFollow(FOLLOW_namelist_in_stat668);
                    namelist22=namelist();

                    state._fsp--;
                    if (state.failed) return s;
                    // Lua.g:57:21: ( '=' explist1 )?
                    int alt6=2;
                    int LA6_0 = input.LA(1);

                    if ( (LA6_0==21) ) {
                        alt6=1;
                    }
                    switch (alt6) {
                        case 1 :
                            // Lua.g:57:22: '=' explist1
                            {
                            match(input,21,FOLLOW_21_in_stat671); if (state.failed) return s;
                            pushFollow(FOLLOW_explist1_in_stat673);
                            explist123=explist1();

                            state._fsp--;
                            if (state.failed) return s;

                            }
                            break;

                    }

                    if ( state.backtracking==0 ) {
                       s =LSStatement.localAssignStatement(CHK.declare(namelist22),explist123,CHK.peekScope(), ((funcblock_scope)funcblock_stack.peek()).func); 
                    }

                    }
                    break;

            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return s;
    }
    // $ANTLR end "stat"

    protected static class ifstat_scope {
        LSIfStatement current;
    }
    protected Stack ifstat_stack = new Stack();


    // $ANTLR start "ifstat"
    // Lua.g:60:1: ifstat returns [LSStatement s] : 'if' e1= exp 'then' b1= block ( 'elseif' e2= exp 'then' b2= block )* ( 'else' b3= block )? 'end' ;
    public final LSStatement ifstat() throws RecognitionException {
        ifstat_stack.push(new ifstat_scope());
        LSStatement s = null;

        LSExpression e1 = null;

        List<LSStatement> b1 = null;

        LSExpression e2 = null;

        List<LSStatement> b2 = null;

        List<LSStatement> b3 = null;


        try {
            // Lua.g:62:2: ( 'if' e1= exp 'then' b1= block ( 'elseif' e2= exp 'then' b2= block )* ( 'else' b3= block )? 'end' )
            // Lua.g:62:4: 'if' e1= exp 'then' b1= block ( 'elseif' e2= exp 'then' b2= block )* ( 'else' b3= block )? 'end'
            {
            match(input,32,FOLLOW_32_in_ifstat699); if (state.failed) return s;
            pushFollow(FOLLOW_exp_in_ifstat703);
            e1=exp();

            state._fsp--;
            if (state.failed) return s;
            match(input,33,FOLLOW_33_in_ifstat705); if (state.failed) return s;
            if ( state.backtracking==0 ) {
              CHK.pushScope("if");
            }
            pushFollow(FOLLOW_block_in_ifstat712);
            b1=block();
